# freeaoe

./: .appveyor.yml  .gitignore  .gitmodules  .lgtm.yml  CMakeLists.txt  CREDITS  INSTALL  README  README.md  TODO  TODO_RELEASE  lgtm.yml  main.cpp
.github/workflows/: build_cmake.yml  codeql.yml
cmake/: FindBZip2.cmake  FindSFML.cmake
doc/: Doxyfile  GAME_SAMPLES.md  README.md  SLPTool_SLPLib-r5.tar  files.txt  links.txt  scn.html  scn_files.txt
doc/dev/: bug-retro.md
doc/old/: CREDITS
fonts/: Alegreya-Bold.latin
fonts/BerryRotunda/: README
lib/genie2d/: CMakeLists.txt
lib/genie2d/src/: buffer.cpp  genied.cpp  genied.h  structs.cpp
lib/genie2d/src/structs/: unitparts.h
lib/genie2d/src/zlib/: zconf.h
lib/genied2/: CMakeLists.txt
lib/genied2/src/: buffer.cpp  buffer.h  genied.cpp  genied.h  language.cpp  language.h  structs.cpp  structs.h  unit.h
misc/fonts/: README.md
misc/general808/: General808.sf2  license
misc/images/: COPYING
misc/soundfont/wt_181k_g/: README  wt_181k_G.sf2
shaders/: xBRZFreescale.glsl
src/: CMakeLists.txt  Engine.cpp  Engine.h  main-new.cpp  main.cpp
src/actions/: ActionAttack.cpp  ActionAttack.h  ActionBuild.cpp  ActionBuild.h  ActionFly.cpp  ActionFly.h  ActionGarrison.cpp  ActionGarrison.h  ActionGather.cpp  ActionGather.h  ActionMove.cpp  ActionMove.h  IAction.cpp  IAction.h
src/ai/: AiPlayer.cpp  AiPlayer.h  AiRule.cpp  AiRule.h  AiScript.cpp  AiScript.h  EnumLogDefs.h  Ids.cpp  Ids.h  ScriptLoader.cpp  ScriptLoader.h  ScriptTokenizer.h  common.h  generate.sh  grammar.gen.tab.cpp  grammar.gen.tab.hpp  grammar.gen.y  lex.yy.cc  location.hh  parser.head.y  parser.mid.y  parser.tail.y  parser.y  tokenizer.flex  tokenizer.gen.flex  tokenizer.head.flex  tokenizer.tail.flex
src/ai/actions/: Actions.cpp  Actions.h
src/ai/conditions/: Conditions.cpp  Conditions.h
src/ai/lists/: actions.list  facts.list  parameters.list  system-constants.list  system-symbols.list
src/audio/: AudioPlayer.cpp  AudioPlayer.h  Implementation_macos.mm  Implementations.cpp  sts_mixer.cpp  sts_mixer.h
src/client/: GameClient.cpp  GameClient.h
src/communication/: CMakeLists.txt  ICommand.h  TunnelToClient.cpp  TunnelToClient.h  TunnelToServer.cpp  TunnelToServer.h  UnitData.cpp  UnitData.h  UnitStatus.cpp  UnitStatus.h
src/communication/commands/: CommandMove.cpp  CommandMove.h  CommandSpawn.cpp  CommandSpawn.h
src/communication/tunnels/: LocalTunnelToClient.cpp  LocalTunnelToClient.h  LocalTunnelToServer.cpp  LocalTunnelToServer.h
src/core/: Attributes.cpp  Attributes.h  Constants.h  Entity.cpp  Entity.h  IAction.cpp  IAction.h  IAttribute.cpp  IAttribute.h  IComponent.cpp  IComponent.h  IEntitySpace.h  List.h  Logger.cpp  Logger.h  ResourceMap.h  SignalEmitter.cpp  SignalEmitter.h  Types.h  Utility.cpp  Utility.h
src/data/: DataManager.cpp  DataManager.h  GenieGraphic.cpp  GenieGraphic.h  GenieTerrain.cpp  GenieTerrain.h  GenieUnit.cpp  GenieUnit.h
src/debug/: AllunitsGameSample.cpp  AllunitsGameSample.h  BasicGameSample.cpp  BasicGameSample.h  ISampleGame.h  SampleGameFactory.cpp  SampleGameFactory.h
src/editor/: Editor.cpp  Editor.h  editor.cpp  editor.h
src/file/: BinaFile.cpp  BinaFile.h  ColorPalette.cpp  ColorPalette.h  DatFile.cpp  DatFile.h  DrsFile.cpp  DrsFile.h  DrsGraphics.cpp  DrsGraphics.h  DrsReader.cpp  DrsReader.h  FileIO.cpp  FileIO.h  IOHelper.cpp  IOHelper.h  SlpFile.cpp  SlpFile.h  SlpFrame.cpp  SlpFrame.h  SubFile.cpp  SubFile.h
src/global/: Config.cpp  Config.h  Constants.h  EventListener.cpp  EventListener.h  EventManager.cpp  EventManager.h  FileCorruptException.cpp  FileCorruptException.h  FileException.cpp  FileException.h  FrameRegulator.cpp  FrameRegulator.h  Logger.cpp  Logger.h  NonCopyable.h  Types.h
src/mechanics/: ActionBuild.cpp  ActionBuild.h  ActionGather.cpp  ActionGather.h  ActionMove.cpp  ActionMove.h  Attributes.cpp  Attributes.h  Building.cpp  Building.h  CMakeLists.txt  Civilization.cpp  Civilization.h  CompMapObject.cpp  CompMapObject.h  CompUnitData.cpp  CompUnitData.h  Component.cpp  Component.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  EntityManager.cpp  EntityManager.h  Farm.cpp  Farm.h  GameManager.cpp  GameManager.h  GameState.cpp  GameState.h  IAction.h  ICommand.cpp  ICommand.h  IState.h  Map.cpp  Map.h  MapRenderer.cpp  MapRenderer.h  MapTile.cpp  (+19 more)
src/mechanics/commands/: CommandSpawn.cpp  CommandSpawn.h
src/render/: ActAnimate.cpp  ActAnimate.h  ActionPanel.cpp  ActionPanel.h  Camera.cpp  Camera.h  CompGraphic.cpp  CompGraphic.h  EntityFormManager.cpp  EntityFormManager.h  GameRenderer.cpp  GameRenderer.h  GraphicRender.cpp  GraphicRender.h  IRenderTarget.cpp  IRenderTarget.h  IRenderableComponent.h  IRenderer.cpp  IRenderer.h  MapRender.cpp  MapRender.h  MapRenderer.cpp  MapRenderer.h  RenderGame.cpp  RenderGame.h  RenderGraphic.cpp  RenderGraphic.h  RenderMap.cpp  RenderMap.h  RenderUnit.cpp  RenderUnit.h  SfmlRenderTarget.cpp  SfmlRenderTarget.h  UnitRenderer.cpp  UnitRenderer.h  UnitsRenderer.cpp  UnitsRenderer.h
src/resource/: AssetManager.cpp  AssetManager.h  AssetManager_HD.h  DataManager.cpp  DataManager.h  GameSpecific.cpp  GameSpecific.h  Graphic.cpp  Graphic.h  LanguageManager.cpp  LanguageManager.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  ResourcePtr.cpp  ResourcePtr.h  SlpFrameIDs.h  SlpIDs.h  Sprite.cpp  Sprite.h  Terrain.cpp  Terrain.h  TerrainSprite.cpp  TerrainSprite.h
src/resource/video/: indeo5.cpp  indeo5.h
src/server/: GameServer.cpp  GameServer.h
src/settings/: input.cpp
src/test/: ai-test.cpp  main.cpp
src/tools/resgen/: CMakeLists.txt
src/ui/: ActionPanel.cpp  ActionPanel.h  Dialog.cpp  Dialog.h  FileDialog.cpp  FileDialog.h  HistoryScreen.cpp  HistoryScreen.h  HomeScreen.cpp  HomeScreen.h  IconButton.cpp  IconButton.h  Minimap.cpp  Minimap.h  MouseCursor.cpp  MouseCursor.h  NumberLabel.cpp  NumberLabel.h  TextButton.cpp  TextButton.h  UiScreen.cpp  UiScreen.h  UnitInfoPanel.cpp  UnitInfoPanel.h
test/: ai-test.cpp  main.cpp
tools/resgen/: CMakeLists.txt  main.cpp
(+15 files in other folders)
